# job_app_framework

./: .env  .env.example  .gitignore  Personne_15_quant_strat_final_complete_Test_4.xlsx  README.md  Talent_aquisition_DB.xlsx  contacts_normalized.xlsx  drafts_ready.csv  drafts_ready.xlsx  pyproject.toml  requirements.txt  send_history_backup.csv  send_results.csv  send_results.xlsx
.github/workflows/: ci.yml
.venvmail/Scripts/: activate  activate.bat
data/manual/: company_email_patterns.csv
data/processed/: contacts_normalized.csv  contacts_normalized.xlsx  drafts_ready.csv  drafts_ready.xlsx  retry_queue.csv  retry_queue.xlsx  send_results.csv  send_results.xlsx
data/raw/: prospecting_contacts_sorted_by_jr_quant_pay.xlsx
docs/: api.md  eval.md
docs/architecture/: 00-repo-audit.md  01-target-architecture.md  02-roadmap.md  03-bootstrap-pivot.md
docs/product/: 04-v1-product-spec.md
evals/: checks.py  golden_set.py
logs/: learning_feedback.csv  send_history.csv
scripts/: demo_ai_quality.py  demo_vertical_slice.py  run_eval.py
src/jobapp/: __init__.py  bounce_parser.py  cleaning.py  cli.py  company.py  config.py  contacts.py  data_loading.py  drafts.py  email_inference.py  (+11 more)
tests/: test_ai_quality.py  test_api_skeleton.py  test_bounce_parser.py  test_cleaning.py  test_company.py  test_contact_selection.py  test_contacts.py  test_data_loading.py  test_db_models.py  test_drafts.py  test_email_inference.py  test_history.py  test_learning.py  test_pipeline_e2e.py  test_retry_logic.py  test_sender_helpers.py  test_ui_flow.py  test_vertical_slice.py
(+27 files in other folders)
