[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jobapp"
version = "0.1.0"
description = "AI outreach platform — V0 core (job application workflow)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "python-dotenv>=1.0,<2",
    "Unidecode>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobapp = ["templates/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Fatal-only gate for the V0 legacy code (syntax errors, undefined names,
# broken f-strings/comparisons). The strict profile lands with the M1 core
# extraction so we do not churn legacy modules before porting them.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Strictness is enforced per-package as modules are ported to the typed core.
